test/functions/bradc/varFns/declVarRetVoidFromRefFn.good
declVarRetVoidFromRefFn.chpl:1: error: function declared 'ref' but does not return anything
