test/functions/bradc/varFns/declVarRetVoidFromRefFn.chpl
proc p() ref : int {
    return;
}
p();
